--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                         Atendieron a combatientes con las extremidades congeladas (pie de trinchera), casos que solían terminar en amputaciones. Mientras tanto, algunos soldados pedían morir y si las mujeres lloraban, les hacían una reprimenda verbal. Se las discriminaba constantemente, hasta se tenia la creencia de que las mujeres en los barcos daban mala suerte.       </p>
           
                 </div>
+                <figure style="width: 70%;">
+                    <img src="https://www.tiemposur.com.ar/uploads/noticia_galeria/2019/04/02/file_52186_main1" style="width: 90%; padding: 0%;" alt="">
+
+                </figure>
                 <div class="news-content">
                     <p>
                         Por otra parte hubo una orden en la dictadura de silenciarlas. Ya que les sugirieron expresamente que no hablen, principalmente, porque ellas vieron las condiciones en las que volvían los soldados. Otro dato curioso es que a las enfermeras britanicas inmediatamente despues de regresar a Londres. Las condecoraron. Para ellos, todo el que se trasladó a una zona de conflicto tiene derecho a una pensión.
